@@ -259,3 +259,4 @@
 20260108 ./var/www/cjdns/hia/watchlist/walk/ver-d.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/walk/walk2b.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/walk/ver-m.sh added.
+20260108 ./var/www/cjdns/hia/watchlist/walk/counts.sh added.
